--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,6 @@
 ^cercosporaR\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
+^Notes - Sim model for management C.beticola in SB.Rmd$
+^Notes---Sim-model-for-management-C.beticola-in-SB.html$
+^cercospora.bib$
