--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(calc_sugarbeet_gdd)
 export(cercospora_dk)
 export(estimate_sb_drymatter)
 import(data.table)
+importFrom(Rdpack,reprompt)
 importFrom(data.table,":=")
