--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
     lubridate,
     remotes
 Config/testthat/edition: 3
