--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: cercospoRa
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9001
-Authors@R: 
+Authors@R: c(
     person(given = "Paul",
            family = "Melloy",
            role = c("aut", "cre", "trl"),
-           email = "P.Melloy@uq.edu.au",
+           email = "p.melloy@uq.edu.au",
            comment = c(ORCID = "0000-0003-4253-7167",
                        "Translated equations from literature and developed package.")),
     person(given = "Rene",
@@ -29,12 +29,12 @@ Authors@R:
     person(given = "Anne-Katrin",
            family = "Mahlein",
            role = c("ctb"),
-           comment = c(ORCID = "0000-0003-1091-3690"))
+           comment = c(ORCID = "0000-0003-1091-3690")))
 Description: Mechanistic epidemiological model for Cercospora leaf spot of sugar beet
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Suggests: 
     knitr,
     rmarkdown,
