deploy pkgdown site

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,3 +4,7 @@
 ^Notes - Sim model for management C.beticola in SB.Rmd$
 ^Notes---Sim-model-for-management-C.beticola-in-SB.html$
 ^cercospora.bib$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
