--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: cercospoRa
-Title: What the Package Does (One Line, Title Case)
+Title: Mechanistic Epidemiological Model for Cercospora Leaf Spot of Sugar Beet
 Version: 0.0.0.9001
 Authors@R: c(
     person(given = "Paul",
@@ -30,7 +30,11 @@ Authors@R: c(
            family = "Mahlein",
            role = c("ctb"),
            comment = c(ORCID = "0000-0003-1091-3690")))
-Description: Mechanistic epidemiological model for Cercospora leaf spot of sugar beet
+Description: This package provides functions to recreate the null prognosis 
+    epidemiological model for describing when the model can't be certain a 
+    chance Cercospora leaf spot (_Cercospora beticola_) epidemic has not 
+    commenced. The model is based on the work of Wolf and Verreet 
+    (2005 <https://apsjournals.apsnet.org/doi/abs/10.1094/PHYTO-95-0269>).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
