--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,4 +56,4 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 LazyData: true
-URL: https://paulmelloy.github.io/cercospoRa/
+URL: https://paulmelloy.github.io/packages/cercospoRa/
