--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -29,10 +29,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-      - name: Install R dependencies
-        run: Rscript -e 'install.packages(c("remotes")); remotes::install_github(repo = "PaulMelloy/epiphytoolR")'
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          extra-repositories: "https://github.com/PaulMelloy/cercospoRa/main"
           extra-packages: any::pkgdown, local::.
           needs: website
 
