--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -31,7 +31,7 @@ jobs:
           use-public-rspm: true
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., "https://github.com/PaulMelloy/epiphytoolR"
+          extra-packages: any::pkgdown, local::., PaulMelloy/epiphytoolR
           needs: website
 
       - name: Build site
