--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,11 +47,13 @@ Suggests:
     remotes,
     epiphytoolR,
     stats,
-    sf 
 Config/testthat/edition: 3
 Imports: 
     data.table,
-    Rdpack
+    Rdpack,
+    sf,
+    terra,
+    minpack.lm
 RdMacros: Rdpack
 VignetteBuilder: knitr
 Remotes: 
