--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(read_sb_growth_parameter)
 import(data.table)
 importFrom(Rdpack,reprompt)
 importFrom(data.table,":=")
+importFrom(terra,plot)
