--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,7 @@ Suggests:
     lubridate,
     remotes,
     epiphytoolR,
-    stats,
+    stats
 Config/testthat/edition: 3
 Imports: 
     data.table,
