--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,3 +62,5 @@ Depends:
     R (>= 2.10)
 LazyData: true
 URL: https://paulmelloy.github.io/cercospoRa/
+BugReports: https://github.com/PaulMelloy/cercospoRa/issues
+
