--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,13 @@ Version: 0.0.0.9003
 Authors@R: c(
     person(given = "Paul",
            family = "Melloy",
-           role = c("aut", "cre", "trl"),
+           role = c("aut", "cre", "trl","cph"),
            email = "p.melloy@uq.edu.au",
            comment = c(ORCID = "0000-0003-4253-7167",
                        "Translated equations from literature and developed package.")),
     person(given = "Rene",
            family = "Heim",
-           role = c("aut"),
+           role = c("aut", "cph"),
            email = "heim@ifz-goettingen.de",
            comment = c(ORCID = "0000-0002-0666-2588",
                        "Code review and development of leaf area index model")),
