update github pkgdow

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,4 @@
-url: https://paulmelloy.github.io/cercospoRa/
+url: http://paul.melloy.com.au/cercospoRa/
 template:
   bootstrap: 5
-  bootswatch: darkly
 
