--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,5 +59,5 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 4.0.0)
 LazyData: true
-URL: https://paul.melloy.com.au/cercospoRa/, https://github.com/PaulMelloy/cercospoRa
+URL: https://paul.melloy.com.au/cercospoRa/, https://github.com/PaulMelloy/cercospoRa, http://paul.melloy.com.au/cercospoRa/
 BugReports: https://github.com/PaulMelloy/cercospoRa/issues
