add format_weather to package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_c_closure)
 export(calc_epidemic_onset)
 export(calc_epidemic_onset_from_image)
 export(calc_r_x0)
+export(format_weather)
 export(read_sb_growth_parameter)
 import(data.table)
 importFrom(Rdpack,reprompt)
