--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,6 @@ Suggests:
     testthat (>= 3.0.0),
     lubridate,
     remotes,
-    epiphytoolR,
     stats
 Config/testthat/edition: 3
 Imports: 
@@ -53,7 +52,8 @@ Imports:
     Rdpack,
     sf,
     terra,
-    minpack.lm
+    minpack.lm,
+    circular
 RdMacros: Rdpack
 VignetteBuilder: knitr
 Depends: 
