--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,9 +32,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-1091-3690")))
 Description: Estimates sugar beet canopy closure with remotely sensed leaf area
     index and estimates when action might be needed to protect the crop from a 
-    Cercospora  leaf spot (_Cercospora beticola_) epidemic with a negative 
-    prognosis model based on the work of Wolf and Verreet 
-    (2005) Phytopathology, 95, no.3, 269-74.
+    Leaf Spot epidemic with a negative prognosis model based on published 
+    models.  
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -44,7 +43,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     remotes,
-    stats
+    stats,
+    spelling
 Config/testthat/edition: 3
 Imports: 
     data.table,
