--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,9 @@ Suggests:
     testthat (>= 3.0.0),
     remotes,
     stats,
-    spelling
+    spelling,
+    geosphere,
+    ggplot2
 Config/testthat/edition: 3
 Imports: 
     data.table,
