--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,5 +59,5 @@ VignetteBuilder: knitr
 Depends: 
     R (>= 4.3.0)
 LazyData: true
-URL: https://paulmelloy.com.au/cercospoRa/, https://github.com/PaulMelloy/cercospoRa, http://paulmelloy.com.au/cercospoRa/
+URL: https://paulmelloy.com.au/cercospoRa/, https://github.com/PaulMelloy/cercospoRa, https://paulmelloy.com.au/cercospoRa/
 BugReports: https://github.com/PaulMelloy/cercospoRa/issues
